<resources>
    <string name="app_name">xkcdAPP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_share_comic">Share Comic</string>
    <string name="action_explain_comic">Explain Comic</string>
    <string name="action_show_alt">Show Alt Text</string>
    <string name="action_download">Download Comic</string>
    <string name="action_search">Search</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="comic_title">Comic Title</string>
    <string name="previous_comic">Previous</string>
    <string name="latest_comic">Load Latest Comic</string>
    <string name="next_comic">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_title">xkcd</string>
    <string name="nav_comic_viewer">Comic Viewer</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_drawer_other">Other</string>

    <string name="about_xkcd_text">xkcd is licensed under Creative Commons Attribution-
    NonCommerical 2.5 License. For more info, visit: xkcd.com/about</string>

    <string name="about_this_app_text">Copyright 2015 Naren Kukreja \n\n
        Licensed under the Apache License, Version 2.0 (the "License"). You may not use this file except in compliance with the License.<br />
        You may obtain a copy of the License at: \n\n
        http://www.apache.org/licenses/LICENSE-2.0 \n\n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.\n\n

        Source Code:

    </string>

    <string name="photo_view">
        Copyright 2011, 2012 Chris Banes \n\n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at \n\n

   http://www.apache.org/licenses/LICENSE-2.0 \n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>

    <string name="volley_text"> Copyright (C) 2014 Xiaoke Zhang \n
        Copyright (C) 2011 The Android Open Source Project \n\n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at \n\n

        http://www.apache.org/licenses/LICENSE-2.0 \n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>

</resources>
