<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share_comic"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_explain"
        android:orderInCategory="200"
        android:title="@string/action_explain_comic"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_alt"
        android:orderInCategory="300"
        android:title="@string/action_show_alt"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_download"
        android:orderInCategory="400"
        android:title="@string/action_download"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="500"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_18dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />

</menu>
