<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_id"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About this app"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/about_this_app_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="About xkcd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/textView" />

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/about_xkcd_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Open Source Licenses"
                android:textSize="24sp"
                android:textStyle="bold"
                android:id="@+id/open_source_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="PhotoView"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/photo_view_text" />

            <TextView
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/photo_view"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Android Volley"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/volley" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/volley_text"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:id="@+id/volley_text" />

        </LinearLayout>



    </ScrollView>



</LinearLayout>