<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark_material_dark"
    >

    <RelativeLayout
        android:id="@+id/main_content_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_id"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></include>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/toolbar_id"
            android:indeterminate="false"
            android:max="100"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView_comic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar_id"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/comic_title"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/alt_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_comic_title"
            android:gravity="center"
            android:visibility="gone"

            />

        <LinearLayout
            android:id="@+id/linear_buttons_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/alt_text"
            android:orientation="horizontal">

            <Button
                android:layout_margin="2dp"
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:background="@color/background_material_dark"
                android:text="@string/previous_comic"
                />

            <Button
                android:layout_margin="2dp"

                android:id="@+id/latest_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:background="@color/background_material_dark"
                android:text="Latest" />

            <Button
                android:layout_margin="2dp"

                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:background="@color/background_material_dark"
                android:text="@string/next_comic"
                />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView_comic_img"
            android:layout_alignEnd="@+id/imageView_comic_img"
            android:layout_alignRight="@+id/imageView_comic_img"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:onClick="onClick"
            android:src="@drawable/ic_shuffle_white_24dp"
            app:fabSize="mini">

        </android.support.design.widget.FloatingActionButton>

        <uk.co.senab.photoview.PhotoView
            android:id="@+id/imageView_comic_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linear_buttons_id"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_drawer_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

